--- a/proveedores/templates/proveedores/proveedores_list.html
+++ b/proveedores/templates/proveedores/proveedores_list.html
@@ -39,12 +39,10 @@
 
 {% block content %}
     <!-- Begin Page Content -->
-    <div class="container-fluid">
-
 
         <!-- DataTales Example -->
-        <div class="shadow mb-4">
-            <div class="card-header py-3" >
+        <div class="container-fluid p-3 border mb-4">
+            <div class="card-header pb-3" >
                 {#                            <h6 class="m-0 font-weight-bold text-primary">Listado de categorias</h6>#}
                 <a href="{% url 'proveedores:proveedor_new' %}" class="btn btn-primary btn-icon-split">
                                         <span class="icon text-white-50">
@@ -149,5 +147,5 @@
 
             </div>
         </div>
-    </div>
+
 {% endblock content %}
