--- a/reservas/templates/reservas/pago_list.html
+++ b/reservas/templates/reservas/pago_list.html
@@ -12,13 +12,6 @@
         border-color: var(--color2);
     }
 
-         .container-fluid {
-            height: 100%; /* Ajusta la altura según tus necesidades */
-            overflow-y: auto; /* Esto hace que la div sea scrollable en el eje Y */
-            border: 1px solid #ccc; /* Añade un borde para visualización */
-            padding: 10px; /* Añade un relleno opcional */
-        }
-
          .ui-slider-range {background-color: #FF464F;}
 
     </style>
@@ -48,10 +41,9 @@
 
 {% block content %}
     <!-- Begin Page Content -->
-    <div class="container-fluid">
 
         <!-- Filtro para pagos -->
-        <div id="filtro-pagos" class="shadow mb-4" style="display: {% if get_params %}block{% else %}none{% endif %};">
+        <div id="filtro-pagos" class="container-fluid p-3 border mb-2" style="display: {% if get_params %}block{% else %}none{% endif %};">
             <div class="card-header">
                 <h6 class="m-0 font-weight-bold text-primary">Filtrar Pagos</h6>
             </div>
@@ -103,8 +95,8 @@
         </div>
 
         <!-- DataTales Example -->
-        <div class="shadow mb-4">
-            <div class="card-header py-3" >
+        <div class="container-fluid p-3 border mb-4">
+            <div class="card-header pb-3" >
                 {#                            <h6 class="m-0 font-weight-bold text-primary">Listado de categorias</h6>#}
                 <a href="{% url 'pagos_new' %}" class="btn btn-primary btn-icon-split">
                                         <span class="icon text-white-50">
@@ -215,7 +207,6 @@
 
             </div>
         </div>
-    </div>
 {% endblock content %}
 
 {% block java %}
