--- a/reservas/templates/reservas/reservaV_confirm_delete.html
+++ b/reservas/templates/reservas/reservaV_confirm_delete.html
@@ -4,10 +4,8 @@
   <div class="container mt-5">
     <div class="card">
       <div class="card-body">
-        <h1 class="card-title">Confirmar eliminación</h1>
+        <h2 class="card-title">Confirmar eliminación</h2>
         <p class="card-text">¿Estás seguro de que deseas eliminar la reserva "{{ reserva }}"?</p>
-
-
 
 
          <div class="d-flex justify-content-center">
@@ -15,11 +13,10 @@
                                         <span class="icon text-white">
                                             <i class="fas fa-times-circle"></i>
                                         </span>
-                            &nbsp;
+                            &nbsp;&nbsp;
                                         <span class="text">Cancelar</span>
                         </a>
-
-                        &nbsp;
+                        &nbsp
 
                        <form method="post" >
                         {% csrf_token %}
