--- a/reservas/templates/reservas/reservasV_list.html
+++ b/reservas/templates/reservas/reservasV_list.html
@@ -19,12 +19,6 @@
         border-color: var(--color2);
     }
 
-     .container-fluid {
-            height: 100%; /* Ajusta la altura según tus necesidades */
-            overflow-y: auto; /* Esto hace que la div sea scrollable en el eje Y */
-            border: 1px solid #ccc; /* Añade un borde para visualización */
-            padding: 10px; /* Añade un relleno opcional */
-        }
 
      .ui-slider-range {background-color: #FF464F;}
 
@@ -33,33 +27,16 @@
 
 
 {% block javascript %}
-    <script>
-        function eliminarProducto(id){
-            Swal.fire({
-                'tittle':'Cava Jiquilpan',
-                'text' : 'Esta accion no se puede deshacer',
-                'icon':'question',
-                'showCancelButton':true,
-                'cancelButtonText':'No, Cancelar',
-                'confirmButtonText':'Si, Eliminar',
-                'reverseButtons':true,
-                'confirmButtonColor':'#E74A3B'
-            }).then(function (result){
-                if (result.isConfirmed){
-                    window.location.href="/reservas/reservasV_list.html/"+id+"/"
-                }
-            })
-        }
-    </script>
+
 {% endblock %}
 
 {% block content %}
 
     <!-- Begin Page Content -->
-    <div class="container-fluid">
+
 
          <!-- Filtro de ventas -->
-    <div id="filtro-reservas" class="shadow mb-4" style="display: {% if get_params %}block{% else %}none{% endif %};">
+    <div id="filtro-reservas" class="container-fluid p-3 border mb-2" style="display: {% if get_params %}block{% else %}none{% endif %};">
             <div class="card-header">
                 <h6 class="m-0 font-weight-bold text-primary">Filtrar Reservaciones</h6>
             </div>
@@ -151,8 +128,8 @@
         </div>
 
         <!-- DataTales Example -->
-        <div class="shadow mb-4">
-            <div class="card-header py-3" >
+        <div class="container-fluid p-3 border mb-4">
+            <div class="card-header pb-3" >
                 {#                            <h6 class="m-0 font-weight-bold text-primary">Listado de categorias</h6>#}
                 <a href="{% url 'reservacionesV_new' %}" class="btn btn-primary btn-icon-split">
                                         <span class="icon text-white-50">
@@ -179,7 +156,9 @@
                             <td>Fecha Ida</td>
                             <td>Fecha Regreso</td>
                             <td>Aerolínea</td>
-                            <td>Estado</td>
+                            <td>Comision</td>
+                            <td>Total</td>
+                            <td class="text-center">Estado</td>
                         </tr>
                         </thead>
                         <tbody>
@@ -201,6 +180,8 @@
                             <td>{{ vuelo.fsalida|date:"d/m/Y" }}</td>
                             <td>{{ vuelo.fregreso|date:"d/m/Y" }}</td>
                             <td>{{ vuelo.aerolinea }}</td>
+                            <td>{{ vuelo.comisionv }}</td>
+                            <td>{{ vuelo.precio }}</td>
                             {% if vuelo.estado == 'P' %}
                             <td class="text-center"><span class="status pago">Pagado</span></td>
                             {% elif vuelo.estado == 'EP' %}
@@ -215,7 +196,7 @@
                                     </a>
                                 </td>
                                 <td class="text-center">
-                                    <a href="" class="btn btn-danger btn-circle btn-sm">
+                                    <a href="{% url 'reservacionesV_delete' vuelo.clavev %}" class="btn btn-danger btn-circle btn-sm">
                                         <i class="fas fa-trash"></i>
                                     </a>
                                 </td>
@@ -284,7 +265,7 @@
 
             </div>
         </div>
-    </div>
+
 {% endblock content %}
 
 {% block java %}
