--- a/reservas/templates/reservas/venta_confirm_delete.html
+++ b/reservas/templates/reservas/venta_confirm_delete.html
@@ -5,7 +5,7 @@
     <div class="card">
       <div class="card-body">
         <h1 class="card-title">Confirmar eliminación</h1>
-        <p class="card-text">¿Estás seguro de que deseas eliminar la reserva "{{ reserva }}"?</p>
+        <p class="card-text">¿Estás seguro de que deseas eliminar la reserva "{{ venta }}"?</p>
 
 
 
