--- a/reservas/templates/reservas/ventas_update.html
+++ b/reservas/templates/reservas/ventas_update.html
@@ -9,28 +9,20 @@
         color: var(--color);
     }
 
-     .container-fluid {
-            height: 100%; /* Ajusta la altura según tus necesidades */
-            overflow-y: auto; /* Esto hace que la div sea scrollable en el eje Y */
-            border: 1px solid #ccc; /* Añade un borde para visualización */
-            padding: 10px; /* Añade un relleno opcional */
-        }
-
-
     </style>
 {% endblock %}
 
 {% block content %}
     <!-- Begin Page Content -->
-    <div class="container-fluid ">
+
 
         <!-- Page Heading -->
         <h1 class="h3 mb-2 font-weight-bold text-primary">Modificar Reserva</h1>
 
         <!-- DataTales Example -->
-        <div class="shadow mb-4">
+        <div class="container-fluid p-3 border mb-4">
             <div class="card-header py-3">
-
+                <p class="font-weight-bold text-primary">Edita los datos de una reserva de vuelo existente</p>
             </div>
             <div class="card-body">
                 {{ mensaje }}
@@ -38,7 +30,7 @@
                     {% csrf_token %}
                     {{ form | crispy }}
 
-                    <div class="d-flex justify-content-end">
+                    <div class="d-flex justify-content-end mb-4">
                         <a href="{% url 'reservacionesV_list' %}" class="btn btn-danger btn-icon-split">
                                         <span class="icon text-white-50">
                                             <i class="fas fa-times-circle"></i>
@@ -57,5 +49,5 @@
                 </form>
             </div>
         </div>
-    </div>
+
 {% endblock %}
